+ writing season NFO files (mainly for Emby) #1697
+ added season plot
+ added a movie set export engine #1928
+ also scrape & identify episode guest stars
+ added a bulk editor for TV shows and episodes #1866
+ filter enhancements: numerical values can now be filtered with various other comparison methods #1952
+ many new filters #1052 #1952 #1949
+ added an option to control how the "new" flag should be cleared
+ added a logo for HDR/Dolby Vision #2191
+ (movie/TV shows) added templates for exporting XML files for tagging *.mkv using mkvtoolnix suite. thx @curious_ralf
+ added EpisodeCount/SeasonCount filter
+ able to identify multiple HDR streams and fallbacks #2213
+ (IMDB) added action to fetch Top 250 numbers; add support for TvShows
+ added an action to reset the "new" flag
+ (FFmpeg) support stacked movies for generating previews #2271
+ Added an option to write the movie set folder/artwork in Emby style
+ added mdblist.com as new rating source #2276
+ added locked filter for movies and tv shows
+ added bulk edit option for "Date Added" (movies / tv-shows) #2013
+ added HFR(Higher Frame Rate) Logo if mediafile has more or equal 48 fps #1376
+ added "Criterion Collection" as known edition #2295
x fixed displaying missing season metadata #2238
x fixed downloading of season artwork #2258
x better handling of image cache upon rename
x added an option to write season data (NFO/artwork) for unavailable seasons
x (movie) renamer preview now shows subfolders too #2010
x (IMDB) adapt keywords parsing to new style
x (TVDB) also scrape season overview/names #2275
x do not drop audio channels with empty bitrate #2262
x do not write NFO files on "update data sources"
x fix cloning of TV episodes #2309
x fixed rebuilding image cache #2268
x (FFmpeg) do not show generated artwork twice in the image chooser #2270
x fix plot formatting with line-breaks #2286
+ added certification column (tv show) #2317
+ (TRAKT) improve search performance, fixed TV poster