@@ -50,6 +50,7 @@ x do not drop audio channels with empty bitrate #2262
 x do not write NFO files on "update data sources"
 x fix cloning of TV episodes #2309
 x fixed rebuilding image cache #2268
+x improve reloading of NFO files; exception for those without s/e numbers #2266
 x (FFmpeg) do not show generated artwork twice in the image chooser #2270
 x fix plot formatting with line-breaks #2286
 + added certification column (tv show) #2317
